some changes made for responsiveness in contactMe

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- Contact Me -->
     <section class="itemBox contactMe" id="contactMe">
-      <form onsubmit="sendMail()">
+      <form>
         <h3>CONTACT ME</h3>
         <input type="text" id="name" placeholder="Your Name" required />
         <input type="email" id="email" placeholder="Your email Id" required />
