--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
         <button type="submit" class="heading-btn">Submit</button>
       </form>
     </section>
+    
+    <footer>
+      <div id="footer">Vishal Prabhu</div>
+    </footer>
+
     <script
       src="https://code.jquery.com/jquery-2.2.4.js"
       integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
